--- a/index.html
+++ b/index.html
@@ -3,77 +3,123 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>High-Res Photo Vault</title>
-    <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>
+    <title>iCloud Clone - Private Vault</title>
+    <script src="https://upload-widget.cloudinary.com/global/all.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        .grid-container { display: grid; grid-template-columns: repeat(auto-fill, minmax(110px, 1fr)); gap: 4px; }
+        .aspect-square { aspect-ratio: 1 / 1; }
+        .selected { border: 4px solid #3b82f6; transform: scale(0.9); }
+        #auth-screen { position: fixed; inset: 0; background: white; z-index: 100; display: flex; align-items: center; justify-content: center; }
+    </style>
 </head>
-<body class="bg-gray-100 min-h-screen font-sans">
+<body class="bg-white">
 
-    <div class="max-w-5xl mx-auto py-10 px-4">
-        <header class="text-center mb-12">
-            <h1 class="text-4xl font-extrabold text-gray-900 mb-2">ჩემი ფოტო გალერეა</h1>
-            <p class="text-gray-600">ორიგინალი ხარისხის შენარჩუნებით</p>
+    <div id="auth-screen">
+        <div class="text-center">
+            <h2 class="text-2xl font-semibold mb-4">შეიყვანეთ PIN კოდი</h2>
+            <input type="password" id="pin-input" class="border-2 border-gray-300 rounded-lg p-3 text-center text-2xl tracking-widest w-40 focus:outline-none focus:border-blue-500">
+            <button onclick="checkPin()" class="block mt-4 mx-auto bg-blue-500 text-white px-6 py-2 rounded-full">შესვლა</button>
+        </div>
+    </div>
+
+    <div id="main-content" class="hidden pb-20">
+        <header class="sticky top-0 bg-white/80 backdrop-blur-md z-10 p-4 border-b flex justify-between items-center">
+            <h1 class="text-xl font-bold">ბიბლიოთეკა</h1>
+            <div class="flex gap-2">
+                <button id="select-mode" class="text-blue-500 font-medium">მონიშვნა</button>
+                <button id="upload_widget" class="bg-blue-500 text-white p-2 rounded-full shadow-md">
+                    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path d="M12 4v16m8-8H4"/></svg>
+                </button>
+            </div>
         </header>
 
-        <div class="flex justify-center mb-10">
-            <button id="upload_widget" class="bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-3 px-8 rounded-full shadow-lg transition-all transform hover:scale-105">
-                + ფოტოს დამატება
-            </button>
+        <div id="action-bar" class="hidden fixed bottom-0 left-0 right-0 bg-gray-100 p-4 flex justify-around border-t z-20">
+            <button onclick="deleteSelected()" class="text-red-500 font-bold">წაშლა</button>
+            <button onclick="addToAlbum()" class="text-blue-500 font-bold">ალბომში დამატება</button>
         </div>
 
-        <div id="gallery" class="columns-1 sm:columns-2 lg:columns-3 gap-4 space-y-4">
-            </div>
+        <main class="p-1">
+            <div id="gallery" class="grid-container">
+                </div>
+        </main>
     </div>
 
     <script>
-        // ჩაწერე შენი მონაცემები აქ:
         const CLOUD_NAME = "djdz4uygc";
-        const UPLOAD_PRESET = "sastawe";
+        const UPLOAD_PRESET = "sastawe"
+        const ACCESS_PASSWORD = "გიჟურად"
 
-        const gallery = document.getElementById('gallery');
+        let selectedPhotos = [];
+        let isSelectMode = false;
+
+        function checkPin() {
+            const val = document.getElementById('pin-input').value;
+            if(val === ACCESS_PASSWORD) {
+                document.getElementById('auth-screen').classList.add('hidden');
+                document.getElementById('main-content').classList.remove('hidden');
+            } else {
+                alert("არასწორია!");
+            }
+        }
 
         const myWidget = cloudinary.createUploadWidget({
             cloudName: CLOUD_NAME, 
             uploadPreset: UPLOAD_PRESET,
+            folder: "my_vault",
             clientAllowedFormats: ["jpg", "png", "jpeg", "heic"],
-            maxFileSize: 20000000, // 20MB-მდე
-            quality: "original", // არ აკუმშავს ფოტოს
-            sources: ["local", "camera", "google_drive"]
+            context: {caption: "uploaded-from-web", uploadedAt: new Date().toISOString()}
         }, (error, result) => { 
-            if (!error && result && result.event === "success") { 
-                console.log('ფოტო აიტვირთა:', result.info);
-                renderImage(result.info.secure_url, result.info.public_id);
+            if (!error && result.event === "success") { 
+                createPhotoElement(result.info.secure_url, result.info.public_id);
             }
         });
 
-        document.getElementById("upload_widget").addEventListener("click", () => myWidget.open(), false);
+        document.getElementById("upload_widget").addEventListener("click", () => myWidget.open());
 
-        function renderImage(url, id) {
+        function createPhotoElement(url, id) {
             const div = document.createElement('div');
-            div.className = "relative group break-inside-avoid bg-white p-2 rounded-xl shadow-sm border border-gray-200";
+            div.className = "aspect-square bg-gray-200 overflow-hidden relative cursor-pointer";
+            div.dataset.id = id;
+            div.innerHTML = `<img src="${url.replace('/upload/', '/upload/w_300,h_300,c_fill/')}" class="w-full h-full object-cover">`;
             
-            // ვქმნით სურათს და გადმოწერის ღილაკს
-            div.innerHTML = `
-                <img src="${url}" class="w-full rounded-lg shadow-inner">
-                <div class="absolute inset-0 bg-black bg-opacity-0 group-hover:bg-opacity-30 transition-all flex items-center justify-center rounded-lg">
-                    <button onclick="downloadOriginal('${url}')" class="opacity-0 group-hover:opacity-100 bg-white text-black px-4 py-2 rounded-md font-medium text-sm shadow-md transition-opacity">
-                        გადმოწერა
-                    </button>
-                </div>
-            `;
-            gallery.prepend(div);
+            div.onclick = () => {
+                if(isSelectMode) {
+                    toggleSelect(div, id);
+                } else {
+                    window.open(url, '_blank'); // სრული ხარისხით ნახვა
+                }
+            };
+            document.getElementById('gallery').prepend(div);
         }
 
-        async function downloadOriginal(url) {
-            const response = await fetch(url);
-            const blob = await response.blob();
-            const blobUrl = window.URL.createObjectURL(blob);
-            const a = document.createElement('a');
-            a.href = blobUrl;
-            a.download = `photo_${Date.now()}.jpg`;
-            document.body.appendChild(a);
-            a.click();
-            document.body.removeChild(a);
+        function toggleSelect(el, id) {
+            if(selectedPhotos.includes(id)) {
+                selectedPhotos = selectedPhotos.filter(p => p !== id);
+                el.classList.remove('selected');
+            } else {
+                selectedPhotos.push(id);
+                el.classList.add('selected');
+            }
+        }
+
+        document.getElementById('select-mode').onclick = function() {
+            isSelectMode = !isSelectMode;
+            this.innerText = isSelectMode ? "გაუქმება" : "მონიშვნა";
+            document.getElementById('action-bar').classList.toggle('hidden', !isSelectMode);
+            if(!isSelectMode) {
+                document.querySelectorAll('.selected').forEach(el => el.classList.remove('selected'));
+                selectedPhotos = [];
+            }
+        };
+
+        function deleteSelected() {
+            if(confirm(`ნამდვილად გსურთ ${selectedPhotos.length} ფოტოს წაშლა?`)) {
+                // აქ რეალურად უნდა გამოიძახო Cloudinary-ს წაშლის API, 
+                // მაგრამ უსაფრთხოებისთვის ამ ეტაპზე მხოლოდ ეკრანიდან ვაქრობთ.
+                alert("ფოტოები წაიშალა (საცავისთვის საჭიროა Backend API)");
+                location.reload();
+            }
         }
     </script>
 </body>
