Refactor header to include user image and layout

--- a/index.html
+++ b/index.html
@@ -30,9 +30,12 @@
 
     <div id="app-content" class="hidden">
         
-        <header class="ios-blur sticky top-0 z-50 p-4 flex justify-between items-center border-b border-gray-100">
-            <h1 id="page-title" class="text-2xl font-extrabold tracking-tight">ბიბლიოთეკა</h1>
-            <button id="upload_widget" class="text-blue-500 font-bold text-lg">დამატება</button>
+       <header class="ios-blur sticky top-0 z-50 p-4 flex justify-between items-center border-b border-gray-100">
+    <div class="flex items-center gap-3">
+        <img src="შენი_ფოტოს_ლინკი_აქ" class="w-10 h-10 rounded-full object-cover border border-gray-200 shadow-sm">
+        <h1 id="page-title" class="text-2xl font-extrabold tracking-tight">ბიბლიოთეკა</h1>
+    </div>
+    <button id="upload_widget" class="text-blue-500 font-bold text-lg">დამატება</button>
         </header>
 
         <div id="view-library" class="pb-32">
