--- a/index.html
+++ b/index.html
@@ -10,52 +10,70 @@
         body { font-family: -apple-system, sans-serif; background: #000; color: #fff; margin: 0; overflow: hidden; }
         .grid-view { display: grid; grid-template-columns: repeat(3, 1fr); gap: 2px; }
         .ios-blur { background: rgba(0, 0, 0, 0.9); backdrop-filter: blur(20px); -webkit-backdrop-filter: blur(20px); }
-        .selected-img { border: 3px solid #3b82f6; position: relative; }
-        .selected-img::after { content: "✓"; position: absolute; top: 5px; right: 5px; background: #3b82f6; color: white; border-radius: 50%; width: 20px; height: 20px; display: flex; items-center; justify-content: center; font-size: 12px; font-weight: bold; }
-        #viewer { display: none; position: fixed; inset: 0; background: #000; z-index: 1000; overflow: hidden; }
-        #viewer-slider { display: flex; height: 100%; transition: transform 0.2s ease-out; }
+        .selected-img { border: 4px solid #3b82f6; position: relative; opacity: 0.8; }
+        .selected-img::after { content: "✓"; position: absolute; bottom: 5px; right: 5px; background: #3b82f6; color: white; border-radius: 50%; width: 22px; height: 22px; display: flex; items-center; justify-content: center; font-size: 14px; font-weight: bold; }
+        #viewer { display: none; position: fixed; inset: 0; background: #000; z-index: 1000; }
+        #viewer-slider { display: flex; height: 100%; transition: transform 0.25s cubic-bezier(0.2, 0, 0, 1); }
         .slide { min-width: 100%; height: 100%; display: flex; align-items: center; justify-content: center; }
         .slide img { max-width: 100%; max-height: 100%; object-fit: contain; }
-        .action-bar { position: fixed; bottom: 85px; left: 50%; transform: translateX(-50%); display: none; gap: 10px; z-index: 100; }
+        #move-modal { display: none; position: fixed; inset: 0; background: rgba(0,0,0,0.8); z-index: 2000; align-items: center; justify-content: center; padding: 20px; }
+        .album-item:active { background: rgba(255,255,255,0.1); }
     </style>
 </head>
 <body>
 
-    <div id="auth-screen" class="fixed inset-0 bg-black z-[2000] flex flex-col items-center justify-center p-6 text-center">
+    <div id="auth-screen" class="fixed inset-0 bg-black z-[3000] flex flex-col items-center justify-center p-6 text-center">
         <h2 class="text-4xl font-black italic mb-10 tracking-tighter uppercase">სასტაWE</h2>
-        <input type="password" id="pin-input" placeholder="••••" class="w-full max-w-xs text-center text-3xl bg-zinc-900 p-4 rounded-2xl mb-4 focus:outline-none border border-zinc-800">
-        <button onclick="checkAuth()" class="bg-white text-black w-full max-w-xs p-4 rounded-2xl font-bold uppercase">შესვლა</button>
+        <input type="password" id="pin-input" placeholder="••••" class="w-full max-w-xs text-center text-3xl bg-zinc-900 p-4 rounded-2xl mb-4 focus:outline-none border border-zinc-800 text-white">
+        <button onclick="checkAuth()" class="bg-white text-black w-full max-w-xs p-4 rounded-2xl font-bold uppercase active:scale-95 transition">შესვლა</button>
+    </div>
+
+    <div id="move-modal">
+        <div class="bg-zinc-900 w-full max-w-sm rounded-3xl overflow-hidden border border-zinc-800">
+            <div class="p-5 border-b border-zinc-800 flex justify-between items-center">
+                <span class="text-xs font-bold uppercase">აირჩიე ალბომი</span>
+                <button onclick="closeMoveModal()" class="text-zinc-500">✕</button>
+            </div>
+            <div id="move-albums-list" class="max-h-[300px] overflow-y-auto p-2">
+                </div>
+        </div>
     </div>
 
     <div id="app-content" class="hidden h-screen flex flex-col">
-        <header class="ios-blur p-5 flex justify-between items-center border-b border-zinc-900 sticky top-0 z-50">
+        <header class="ios-blur p-5 flex justify-between items-center border-b border-zinc-800 sticky top-0 z-50">
             <h1 id="header-title" class="text-xl font-black italic uppercase">სასტაWE</h1>
-            <div class="flex gap-4">
-                <button id="select-mode-btn" onclick="toggleSelectMode()" class="text-zinc-500 text-xs font-bold uppercase">მონიშვნა</button>
-                <button onclick="openUploadWidget()" class="text-blue-500 font-bold">დამატება</button>
+            <div class="flex gap-4 items-center">
+                <button id="select-mode-btn" onclick="toggleSelectMode()" class="text-zinc-500 text-[10px] font-bold uppercase tracking-widest">მონიშვნა</button>
+                <button onclick="openUploadWidget()" class="text-blue-500 font-extrabold text-sm">+</button>
             </div>
         </header>
 
-        <div id="action-bar" class="action-bar">
-            <button onclick="deleteSelected()" class="bg-red-600 px-6 py-3 rounded-full text-xs font-bold uppercase shadow-lg">წაშლა</button>
-            <button onclick="moveSelected()" class="bg-blue-600 px-6 py-3 rounded-full text-xs font-bold uppercase shadow-lg">გადატანა</button>
+        <div id="action-bar" class="hidden fixed bottom-24 left-5 right-5 h-16 ios-blur border border-zinc-800 rounded-2xl z-[100] flex items-center justify-around px-4 shadow-2xl">
+            <button onclick="deleteSelected()" class="text-red-500 text-[10px] font-bold uppercase">წაშლა</button>
+            <div class="h-6 w-[1px] bg-zinc-800"></div>
+            <button onclick="openMoveModal()" class="text-blue-500 text-[10px] font-bold uppercase">გადატანა</button>
         </div>
 
         <div id="main-scroll" class="flex-1 overflow-y-auto pb-32">
             <div id="view-library" class="grid-view"></div>
+
             <div id="view-albums" class="hidden p-4">
+                <div class="flex justify-between items-center mb-6">
+                    <h2 class="text-[10px] font-bold text-zinc-500 uppercase tracking-widest">ალბომები</h2>
+                    <button onclick="createNewAlbum()" class="text-[10px] bg-white text-black px-4 py-2 rounded-full font-bold uppercase">+ მორიგი carpe diem</button>
+                </div>
                 <div id="albums-grid" class="grid grid-cols-2 gap-4"></div>
             </div>
         </div>
 
         <nav class="ios-blur fixed bottom-0 left-0 right-0 h-20 border-t border-zinc-900 flex justify-around items-center z-50">
-            <button onclick="switchTab('library')" class="flex-1 text-[10px] font-bold uppercase tracking-widest text-white">Carpe Diem</button>
-            <button onclick="switchTab('albums')" class="flex-1 text-[10px] font-bold uppercase tracking-widest text-zinc-500 border-l border-zinc-800">გეჟობები</button>
+            <button onclick="switchTab('library')" id="nav-lib" class="flex-1 text-[10px] font-bold uppercase tracking-widest text-white">Carpe Diem</button>
+            <button onclick="switchTab('albums')" id="nav-alb" class="flex-1 text-[10px] font-bold uppercase tracking-widest text-zinc-600 border-l border-zinc-800">გეჟობები</button>
         </nav>
     </div>
 
     <div id="viewer">
-        <div class="absolute top-10 left-5 z-[1100] bg-zinc-800/50 px-4 py-2 rounded-full text-[10px] font-bold" onclick="closeViewer()">უკან</div>
+        <div class="absolute top-12 left-5 z-[1100] bg-white/10 backdrop-blur-md px-5 py-2 rounded-full text-[10px] font-bold uppercase" onclick="closeViewer()">უკან</div>
         <div id="viewer-slider"></div>
     </div>
 
@@ -82,7 +100,7 @@
             CURRENT_TAG = tag;
             document.getElementById('header-title').innerText = tag === "shared_vault" ? "სასტაWE" : tag;
             const grid = document.getElementById('view-library');
-            grid.innerHTML = '<div class="col-span-3 text-center p-20">...</div>';
+            grid.innerHTML = '<div class="col-span-3 text-center p-20 text-zinc-600 text-xs uppercase tracking-widest animate-pulse">იტვირთება...</div>';
             
             try {
                 const res = await fetch(`https://res.cloudinary.com/${CLOUD_NAME}/image/list/v${Date.now()}/${tag}.json`);
@@ -92,24 +110,16 @@
                     src: `https://res.cloudinary.com/${CLOUD_NAME}/image/upload/v${img.version}/${img.public_id}.${img.format}`
                 }));
                 renderGrid();
-            } catch (e) { grid.innerHTML = '<div class="col-span-3 text-center p-20 text-zinc-700">ცარიელია</div>'; }
+            } catch (e) { grid.innerHTML = '<div class="col-span-3 text-center p-20 text-zinc-800 text-[10px] uppercase tracking-widest">ცარიელია</div>'; }
         }
 
         function renderGrid() {
             const grid = document.getElementById('view-library');
             grid.innerHTML = allPhotos.map((img, i) => `
-                <div id="img-${i}" class="aspect-square bg-zinc-900 overflow-hidden" onclick="handleImgClick(${i})">
+                <div id="img-${i}" class="aspect-square bg-zinc-900 overflow-hidden active:scale-95 transition pointer-events-auto" onclick="handleImgClick(${i})">
                     <img src="${img.src.replace('/upload/', '/upload/w_400,c_fill,g_auto/')}" class="w-full h-full object-cover pointer-events-none">
                 </div>
             `).join('');
-        }
-
-        function toggleSelectMode() {
-            isSelectMode = !isSelectMode;
-            selectedPhotos.clear();
-            document.getElementById('select-mode-btn').innerText = isSelectMode ? "გაუქმება" : "მონიშვნა";
-            document.getElementById('action-bar').style.display = isSelectMode ? 'flex' : 'none';
-            renderGrid();
         }
 
         function handleImgClick(index) {
@@ -127,6 +137,37 @@
             }
         }
 
+        function toggleSelectMode() {
+            isSelectMode = !isSelectMode;
+            selectedPhotos.clear();
+            document.getElementById('select-mode-btn').innerText = isSelectMode ? "გაუქმება" : "მონიშვნა";
+            document.getElementById('action-bar').classList.toggle('hidden', !isSelectMode);
+            renderGrid();
+        }
+
+        // Move Modal Logic
+        function openMoveModal() {
+            if (selectedPhotos.size === 0) return alert("ჯერ მონიშნე ფოტოები!");
+            const list = document.getElementById('move-albums-list');
+            list.innerHTML = albums.map(alb => `
+                <div onclick="executeMove('${alb}')" class="album-item p-4 border-b border-zinc-800 flex items-center justify-between">
+                    <span class="text-sm font-medium uppercase tracking-tighter">${alb}</span>
+                    <span class="text-blue-500">→</span>
+                </div>
+            `).join('');
+            document.getElementById('move-modal').style.display = 'flex';
+        }
+
+        function closeMoveModal() { document.getElementById('move-modal').style.display = 'none'; }
+
+        function executeMove(targetTag) {
+            alert(`წარმატებით გადავიდა ${selectedPhotos.size} ფოტო ალბომში: ${targetTag}`);
+            allPhotos = allPhotos.filter((_, i) => !selectedPhotos.has(i));
+            renderGrid();
+            closeMoveModal();
+            toggleSelectMode();
+        }
+
         function deleteSelected() {
             if (confirm(`წავშალოთ მონიშნული ${selectedPhotos.size} ფოტო?`)) {
                 allPhotos = allPhotos.filter((_, i) => !selectedPhotos.has(i));
@@ -135,48 +176,75 @@
             }
         }
 
-        function moveSelected() {
-            if (selectedPhotos.size === 0) return;
-            const target = prompt("რომელ ალბომში გადავიტანოთ? (" + albums.join(", ") + ")");
-            if (target && albums.includes(target.toLowerCase())) {
-                alert(`ფოტოები გადავიდა ალბომში: ${target}`);
-                allPhotos = allPhotos.filter((_, i) => !selectedPhotos.has(i));
-                renderGrid();
-                toggleSelectMode();
-            } else {
-                alert("ალბომი არ არსებობს!");
+        // Albums Logic
+        function createNewAlbum() {
+            const name = prompt("მორიგი carpe diem:");
+            if(name) {
+                const formattedName = name.toLowerCase().replace(/\s+/g, '_');
+                if(!albums.includes(formattedName)) {
+                    albums.push(formattedName);
+                    localStorage.setItem('sastawe_albums', JSON.stringify(albums));
+                    renderAlbums();
+                }
             }
-        }
-
-        // Viewer & Albums Logic
-        function openViewer(index) {
-            document.getElementById('viewer').style.display = 'block';
-            const slider = document.getElementById('viewer-slider');
-            slider.innerHTML = allPhotos.map(img => `<div class="slide"><img src="${img.src}"></div>`).join('');
-            slider.style.transform = `translateX(${-index * window.innerWidth}px)`;
-        }
-
-        function closeViewer() { document.getElementById('viewer').style.display = 'none'; }
-
-        function switchTab(tab) {
-            document.getElementById('view-library').classList.toggle('hidden', tab !== 'library');
-            document.getElementById('view-albums').classList.toggle('hidden', tab !== 'albums');
-            if(tab === 'albums') renderAlbums();
         }
 
         function renderAlbums() {
             const grid = document.getElementById('albums-grid');
             grid.innerHTML = albums.map(alb => `
-                <div onclick="loadGallery('${alb}'); switchTab('library')" class="aspect-square bg-zinc-900 rounded-3xl flex flex-col items-center justify-center border border-zinc-800">
-                    <span class="text-2xl mb-1">📂</span>
-                    <span class="text-[9px] font-bold uppercase">${alb}</span>
+                <div onclick="loadGallery('${alb}'); switchTab('library')" class="aspect-square bg-zinc-900 rounded-[2rem] flex flex-col items-center justify-center border border-zinc-800 active:scale-95 transition">
+                    <span class="text-3xl mb-2">📂</span>
+                    <span class="text-[9px] font-black uppercase text-zinc-500 tracking-widest">${alb}</span>
                 </div>
             `).join('');
         }
 
+        // Slider
+        let viewerIndex = 0;
+        const slider = document.getElementById('viewer-slider');
+        function openViewer(index) {
+            viewerIndex = index;
+            document.getElementById('viewer').style.display = 'block';
+            slider.innerHTML = allPhotos.map(img => `<div class="slide"><img src="${img.src}"></div>`).join('');
+            updateSlider(false);
+        }
+        function closeViewer() { document.getElementById('viewer').style.display = 'none'; }
+        function updateSlider(animate = true) {
+            slider.style.transition = animate ? 'transform 0.25s cubic-bezier(0.2, 0, 0, 1)' : 'none';
+            slider.style.transform = `translateX(${-viewerIndex * window.innerWidth}px)`;
+        }
+
+        // Touch Control
+        let startX = 0, isDragging = false;
+        slider.addEventListener('touchstart', e => { startX = e.touches[0].clientX; isDragging = true; slider.style.transition = 'none'; });
+        slider.addEventListener('touchmove', e => {
+            if(!isDragging) return;
+            const diff = e.touches[0].clientX - startX;
+            slider.style.transform = `translateX(${-viewerIndex * window.innerWidth + diff}px)`;
+        });
+        slider.addEventListener('touchend', e => {
+            isDragging = false;
+            const diff = e.changedTouches[0].clientX - startX;
+            if(Math.abs(diff) > 50) {
+                if(diff > 0 && viewerIndex > 0) viewerIndex--;
+                else if(diff < 0 && viewerIndex < allPhotos.length - 1) viewerIndex++;
+            }
+            updateSlider();
+        });
+
+        function switchTab(tab) {
+            document.getElementById('view-library').classList.toggle('hidden', tab !== 'library');
+            document.getElementById('view-albums').classList.toggle('hidden', tab !== 'albums');
+            document.getElementById('nav-lib').classList.toggle('text-white', tab === 'library');
+            document.getElementById('nav-lib').classList.toggle('text-zinc-600', tab !== 'library');
+            document.getElementById('nav-alb').classList.toggle('text-white', tab === 'albums');
+            document.getElementById('nav-alb').classList.toggle('text-zinc-600', tab !== 'albums');
+            if(tab === 'albums') renderAlbums();
+        }
+
         function openUploadWidget() {
             cloudinary.openUploadWidget({ cloudName: CLOUD_NAME, uploadPreset: UPLOAD_PRESET, tags: [CURRENT_TAG] }, 
-            (err, res) => { if (res.event === "success") setTimeout(() => loadGallery(CURRENT_TAG), 1200); });
+            (err, res) => { if (res && res.event === "success") setTimeout(() => loadGallery(CURRENT_TAG), 1200); });
         }
     </script>
 </body>
