--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         .grid-view { display: grid; grid-template-columns: repeat(3, 1fr); gap: 2px; }
         .ios-blur { background: rgba(0, 0, 0, 0.9); backdrop-filter: blur(20px); -webkit-backdrop-filter: blur(20px); }
         .selected-img { border: 4px solid #3b82f6; position: relative; opacity: 0.8; }
-        .selected-img::after { content: "✓"; position: absolute; bottom: 5px; right: 5px; background: #3b82f6; color: white; border-radius: 50%; width: 22px; height: 22px; display: flex; items-center; justify-content: center; font-size: 14px; font-weight: bold; }
+        .selected-img::after { content: "✓"; position: absolute; bottom: 5px; right: 5px; background: #3b82f6; color: white; border-radius: 50%; width: 22px; height: 22px; display: flex; align-items: center; justify-content: center; font-size: 14px; font-weight: bold; }
         #viewer { display: none; position: fixed; inset: 0; background: #000; z-index: 1000; }
         #viewer-slider { display: flex; height: 100%; transition: transform 0.25s cubic-bezier(0.2, 0, 0, 1); }
         .slide { min-width: 100%; height: 100%; display: flex; align-items: center; justify-content: center; }
@@ -31,11 +31,10 @@
     <div id="move-modal">
         <div class="bg-zinc-900 w-full max-w-sm rounded-3xl overflow-hidden border border-zinc-800">
             <div class="p-5 border-b border-zinc-800 flex justify-between items-center">
-                <span class="text-xs font-bold uppercase">აირჩიე ალბომი</span>
+                <span id="move-modal-title" class="text-xs font-bold uppercase">აირჩიე ალბომი</span>
                 <button onclick="closeMoveModal()" class="text-zinc-500">✕</button>
             </div>
-            <div id="move-albums-list" class="max-h-[300px] overflow-y-auto p-2">
-                </div>
+            <div id="move-albums-list" class="max-h-[300px] overflow-y-auto p-2"></div>
         </div>
     </div>
 
@@ -56,7 +55,6 @@
 
         <div id="main-scroll" class="flex-1 overflow-y-auto pb-32">
             <div id="view-library" class="grid-view"></div>
-
             <div id="view-albums" class="hidden p-4">
                 <div class="flex justify-between items-center mb-6">
                     <h2 class="text-[10px] font-bold text-zinc-500 uppercase tracking-widest">ალბომები</h2>
@@ -145,12 +143,11 @@
             renderGrid();
         }
 
-        // Move Modal Logic
         function openMoveModal() {
             if (selectedPhotos.size === 0) return alert("ჯერ მონიშნე ფოტოები!");
             const list = document.getElementById('move-albums-list');
             list.innerHTML = albums.map(alb => `
-                <div onclick="executeMove('${alb}')" class="album-item p-4 border-b border-zinc-800 flex items-center justify-between">
+                <div onclick="executeMove('${alb}')" class="album-item p-4 border-b border-zinc-800 flex items-center justify-between cursor-pointer">
                     <span class="text-sm font-medium uppercase tracking-tighter">${alb}</span>
                     <span class="text-blue-500">→</span>
                 </div>
@@ -160,23 +157,56 @@
 
         function closeMoveModal() { document.getElementById('move-modal').style.display = 'none'; }
 
-        function executeMove(targetTag) {
-            alert(`წარმატებით გადავიდა ${selectedPhotos.size} ფოტო ალბომში: ${targetTag}`);
-            allPhotos = allPhotos.filter((_, i) => !selectedPhotos.has(i));
-            renderGrid();
-            closeMoveModal();
-            toggleSelectMode();
+        // --- განახლებული გადატანის ფუნქცია ---
+        async function executeMove(targetTag) {
+            if (targetTag === CURRENT_TAG) return alert("ფოტოები უკვე ამ ალბომშია!");
+
+            const selectedIndices = Array.from(selectedPhotos);
+            const photosToMove = selectedIndices.map(i => allPhotos[i]);
+            const modalTitle = document.getElementById('move-modal-title');
+            
+            modalTitle.innerText = "მიმდინარეობს გადატანა...";
+            modalTitle.classList.add("animate-pulse", "text-blue-500");
+
+            try {
+                for (const photo of photosToMove) {
+                    const formData = new FormData();
+                    formData.append('file', photo.src);
+                    formData.append('upload_preset', UPLOAD_PRESET);
+                    formData.append('tags', targetTag); 
+                    formData.append('public_id', photo.id);
+
+                    // Cloudinary-ზე გადაწერა ახალი თეგით
+                    await fetch(`https://api.cloudinary.com/v1_1/${CLOUD_NAME}/image/upload`, {
+                        method: 'POST',
+                        body: formData
+                    });
+                }
+
+                alert(`წარმატებით გადავიდა ${photosToMove.length} ფოტო ალბომში: ${targetTag}`);
+                
+                // წაშლა მიმდინარე სიიდან
+                allPhotos = allPhotos.filter((_, i) => !selectedPhotos.has(i));
+                renderGrid();
+                closeMoveModal();
+                toggleSelectMode();
+            } catch (error) {
+                console.error(error);
+                alert("შეცდომა გადატანისას. შეამოწმე ინტერნეტი ან Preset-ის პარამეტრები.");
+            } finally {
+                modalTitle.innerText = "აირჩიე ალბომი";
+                modalTitle.classList.remove("animate-pulse", "text-blue-500");
+            }
         }
 
         function deleteSelected() {
-            if (confirm(`წავშალოთ მონიშნული ${selectedPhotos.size} ფოტო?`)) {
+            if (confirm(`წავშალოთ მონიშნული ${selectedPhotos.size} ფოტო? (მხოლოდ ეკრანიდან)`)) {
                 allPhotos = allPhotos.filter((_, i) => !selectedPhotos.has(i));
                 renderGrid();
                 toggleSelectMode();
             }
         }
 
-        // Albums Logic
         function createNewAlbum() {
             const name = prompt("მორიგი carpe diem:");
             if(name) {
@@ -199,7 +229,6 @@
             `).join('');
         }
 
-        // Slider
         let viewerIndex = 0;
         const slider = document.getElementById('viewer-slider');
         function openViewer(index) {
@@ -214,7 +243,6 @@
             slider.style.transform = `translateX(${-viewerIndex * window.innerWidth}px)`;
         }
 
-        // Touch Control
         let startX = 0, isDragging = false;
         slider.addEventListener('touchstart', e => { startX = e.touches[0].clientX; isDragging = true; slider.style.transition = 'none'; });
         slider.addEventListener('touchmove', e => {
