--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         .loading-bar { height: 3px; background: #3b82f6; width: 0%; transition: width 0.3s; position: fixed; top: 0; left: 0; z-index: 9999; }
     </style>
 </head>
-<body>
+<body onload="checkAutoLogin()">
 
     <div id="loading-progress" class="loading-bar"></div>
 
@@ -103,17 +103,30 @@
         let isSelectMode = false;
         let albums = JSON.parse(localStorage.getItem('vault_albums')) || ["shared_vault", "party", "trip"];
 
-        function checkAuth() {
-            if(document.getElementById('pin-input').value === PASS) {
+        function checkAutoLogin() {
+            if (sessionStorage.getItem('isAuth') === 'true') {
                 document.getElementById('auth-screen').style.display = 'none';
                 document.getElementById('app-content').classList.remove('hidden');
                 loadGallery(CURRENT_TAG);
             }
         }
 
+        function checkAuth() {
+            if(document.getElementById('pin-input').value === PASS) {
+                sessionStorage.setItem('isAuth', 'true');
+                document.getElementById('auth-screen').style.display = 'none';
+                document.getElementById('app-content').classList.remove('hidden');
+                loadGallery(CURRENT_TAG);
+            } else {
+                alert("არასწორია!");
+            }
+        }
+
         async function loadGallery(tag) {
             CURRENT_TAG = tag;
-            document.getElementById('header-title').innerText = (tag === "shared_vault" || tag === "sastawe_main") ? "სასტაWE" : tag;
+            const displayTitle = (tag === "shared_vault" || tag === "sastawe_main") ? "სასტაWE" : tag.replace(/_/g, ' ');
+            document.getElementById('header-title').innerText = displayTitle;
+            
             const grid = document.getElementById('view-library');
             grid.innerHTML = '<div class="col-span-3 text-center p-20 text-zinc-600 animate-pulse text-[10px] uppercase">იტვირთება...</div>';
             
@@ -127,7 +140,6 @@
                 }));
                 renderGrid();
             } catch (e) {
-                if(tag === "shared_vault") { loadGallery("sastawe_main"); return; }
                 grid.innerHTML = '<div class="col-span-3 text-center p-20 text-zinc-800 text-[10px] uppercase">ცარიელია</div>'; 
             }
         }
@@ -141,12 +153,6 @@
             `).join('');
         }
 
-        function updateSelectionUI() {
-            const countEl = document.getElementById('selection-count');
-            countEl.innerText = `${selectedPhotos.size} მონიშნული`;
-            countEl.classList.toggle('hidden', !isSelectMode);
-        }
-
         function handleImgClick(index) {
             if (isSelectMode) {
                 const el = document.getElementById(`img-${index}`);
@@ -157,7 +163,9 @@
                     selectedPhotos.add(index);
                     el.classList.add('selected-img');
                 }
-                updateSelectionUI();
+                const countEl = document.getElementById('selection-count');
+                countEl.innerText = `${selectedPhotos.size} მონიშნული`;
+                countEl.classList.toggle('hidden', selectedPhotos.size === 0);
             } else { openViewer(index); }
         }
 
@@ -166,7 +174,7 @@
             selectedPhotos.clear();
             document.getElementById('select-mode-btn').innerText = isSelectMode ? "გაუქმება" : "მონიშვნა";
             document.getElementById('action-bar').classList.toggle('hidden', !isSelectMode);
-            updateSelectionUI();
+            document.getElementById('selection-count').classList.add('hidden');
             if (!isSelectMode) renderGrid();
         }
 
@@ -175,18 +183,17 @@
                 selectedPhotos.add(i);
                 document.getElementById(`img-${i}`).classList.add('selected-img');
             });
-            updateSelectionUI();
+            document.getElementById('selection-count').innerText = `${selectedPhotos.size} მონიშნული`;
+            document.getElementById('selection-count').classList.remove('hidden');
         }
 
-        // New Download Function
         async function downloadSelected() {
             const loader = document.getElementById('loading-progress');
-            loader.style.width = "10%";
-            const indexes = Array.from(selectedPhotos);
-            for (let i of indexes) {
+            loader.style.width = "20%";
+            for (let i of Array.from(selectedPhotos)) {
                 const link = document.createElement('a');
                 link.href = allPhotos[i].src;
-                link.download = `photo_${i}.jpg`;
+                link.download = `photo_${allPhotos[i].id}.jpg`;
                 document.body.appendChild(link);
                 link.click();
                 document.body.removeChild(link);
@@ -203,12 +210,14 @@
                 await fetch('/api/delete', { method: 'POST', body: JSON.stringify({ public_id: allPhotos[i].id }) });
             }
             loader.style.width = "100%";
-            location.reload();
+            loadGallery(CURRENT_TAG); 
+            toggleSelectMode();
         }
 
         async function executeMove(targetTag) {
             const loader = document.getElementById('loading-progress');
             loader.style.width = "20%";
+            closeMoveModal();
             for (let i of Array.from(selectedPhotos)) {
                 await fetch('/api/move', {
                     method: 'POST',
@@ -216,14 +225,15 @@
                 });
             }
             loader.style.width = "100%";
-            location.reload();
+            loadGallery(CURRENT_TAG); 
+            toggleSelectMode();
         }
 
         function openMoveModal() {
             const list = document.getElementById('move-albums-list');
             list.innerHTML = albums.map(alb => `
                 <div onclick="executeMove('${alb}')" class="p-4 border-b border-zinc-800 active:bg-zinc-800 text-[11px] uppercase tracking-widest font-bold">
-                    ${(alb === "shared_vault" || alb === "sastawe_main") ? "სასტაWE" : alb}
+                    ${(alb === "shared_vault" || alb === "sastawe_main") ? "სასტაWE" : alb.replace(/_/g, ' ')}
                 </div>
             `).join('');
             document.getElementById('move-modal').style.display = 'flex';
@@ -245,8 +255,8 @@
         }
 
         function addNewAlbum() {
-            // "მორიგი carpe diem" როგორც default მნიშვნელობა
-            const n = prompt("ალბომის სახელი:", "მორიგი carpe diem");
+            // ველი ახლა ცარიელია
+            const n = prompt("შეიყვანეთ ახალი ალბომის სახელი:", "");
             if (n) {
                 const slug = n.toLowerCase().trim().replace(/\s+/g, '_');
                 if(!albums.includes(slug)) {
@@ -288,7 +298,6 @@
             document.getElementById('viewer-slider').style.transform = `translateX(${-vIdx * window.innerWidth}px)`; 
         }
 
-        // Fast Swipe Logic
         let sX = 0, currX = 0;
         const slider = document.getElementById('viewer-slider');
         slider.ontouchstart = e => {
